--- a/PROPPS/WebContent/pages/test.html
+++ b/PROPPS/WebContent/pages/test.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html> <head>
+<html> 
+<head>
 <meta charset="utf-8" />
-<title>Test</title> </head>
+<title>Test</title> 
+</head>
 <body>
 <p>Ceci est une page HTML.</p>
-</body> </html>
+</body> 
+</html>
