--- a/PROPPS/WebContent/index.html
+++ b/PROPPS/WebContent/index.html
@@ -21,7 +21,7 @@
         max-width: 300px;
         margin-top:20px;
         padding: 19px 29px 29px;
-       
+             	background-color: #4682B4;
          background-color: #f5f5f5;
         border: 1px solid #e5e5e5;
         -webkit-border-radius: 5px;
@@ -42,6 +42,7 @@
         margin-bottom: 15px;
         padding: 7px 9px;
       }
+
       #header{
       	height:15%;
       	background-color: #4682B4;
