--- a/PROPPS/WebContent/pages/recherche_membre.html
+++ b/PROPPS/WebContent/pages/recherche_membre.html
@@ -151,8 +151,7 @@
                         	<ul class="dropdown-menu">
                         		<li><a href="compte.html"><i class="icon-user"></i> Mon compte</a></li>
                         		<li class="divider"></li>
-                          		<li><a href="#"><i class="icon-envelope"></i> Messagerie</a></li>
-                          		<li><a href="#"><i class="icon-comment"></i> Notifications</a></li>
+                          		<li><a href="messagerie.html"><i class="icon-envelope"></i> Messagerie</a></li>
                         	</ul>
                       	</li>
                       	<li class="divider-vertical"></li>
@@ -216,9 +215,9 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
-    <script src="js/jquery-1.9.0.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/jquery-1.9.0.js"></script>
+    <script src="../js/bootstrap.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
   
 	<script>
 	$(document).off('touchstart.dropdown.data-api');
