--- a/PROPPS/WebContent/pages/result_recherche_membre.html
+++ b/PROPPS/WebContent/pages/result_recherche_membre.html
@@ -119,9 +119,9 @@
     <!-- Fav and touch icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="./ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="./ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="./ico/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="./ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="./ico/favicon.png">
   </head>
 
   <body>
@@ -151,8 +151,7 @@
                         	<ul class="dropdown-menu">
                         		<li><a href="compte.html"><i class="icon-user"></i> Mon compte</a></li>
                         		<li class="divider"></li>
-                          		<li><a href="#"><i class="icon-envelope"></i> Messagerie</a></li>
-                          		<li><a href="#"><i class="icon-comment"></i> Notifications</a></li>
+                          		<li><a href="messagerie.html"><i class="icon-envelope"></i> Messagerie</a></li>
                         	</ul>
                       	</li>
                       	<li class="divider-vertical"></li>
