--- a/PROPPS/WebContent/pages/user.html
+++ b/PROPPS/WebContent/pages/user.html
@@ -151,8 +151,7 @@
                         	<ul class="dropdown-menu">
                         		<li><a href="compte.html"><i class="icon-user"></i> Mon compte</a></li>
                         		<li class="divider"></li>
-                          		<li><a href="#"><i class="icon-envelope"></i> Messagerie</a></li>
-                          		<li><a href="#"><i class="icon-comment"></i> Notifications</a></li>
+                          		<li><a href="messagerie.html"><i class="icon-envelope"></i> Messagerie</a></li>
                         	</ul>
                       	</li>
                       	<li class="divider-vertical"></li>
