--- a/PROPPS/WebContent/index.html
+++ b/PROPPS/WebContent/index.html
@@ -154,8 +154,8 @@
 					<div class="page-header">
 						<h2>Inscription</h2>
 					</div>
-					<a href="pages/inscription1.html" class="btn btn-primary">En tant que Membre</a> &nbsp
-					 <a href="pages/inscription_ent.html" class="btn ">En tant que Recruteur</a>
+					<a href="pages/inscription1.html" class="btn btn-large  btn-block btn-primary">En tant que Membre</a>
+					 <a href="pages/inscription_ent.html" class="btn btn-large btn-block">En tant que Recruteur</a>
 					 
 
 				</div>
