--- a/PROPPS/WebContent/pages/compte.html
+++ b/PROPPS/WebContent/pages/compte.html
@@ -134,11 +134,7 @@
     <![endif]-->
 
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="./ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="./ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="./ico/favicon.png">
+    <link rel="icon" href="../img/propps.ico">
   </head>
 
   <body>
@@ -188,7 +184,7 @@
 					<div id="fiche_user">
 						<img src="../img/oneil.jpeg" width="140" class="img-polaroid">
 						<div id="detail_user">
-						<h2>John Doe</h2><br>
+						<h2>Jack O'Neil</h2><br>
 						<p><i class="icon-briefcase"></i> Profession, Entreprise courante<br>
 						<i class="icon-home"></i> Ville, Pays</p>
 						<a href="#" class="btn btn-primary btn-small" type="button"><i class="icon-plus icon-white"></i> Editer mon profi</a>
@@ -196,7 +192,7 @@
 						
 					</div>
 					<div id="parcours">
-					<h2>A propos de John Doe</h2>
+					<h3>A propos de Jack O'Neil</h3>
 						<dl class="dl-horizontal">
 							<dt>Domaines d'expertise :</dt>
 							<dd>...</dd>	
@@ -234,7 +230,7 @@
 				</div>
 				<div class="span3">
 					<div id="invit">
-						<h2>Invitations</h2>
+						<h3>Invitations</h3>
 						<div id="notification">
 							<div id="notif_contact">
 								Nom, prénom</br>
@@ -243,22 +239,20 @@
 							</div>
 						</div>
 						<div id="notification">
-							<div id="notif_contact">
-								Nom, prénom</br>
-								<button class="btn btn-small btn-success" type="button">Accepter</button>
-								<button class="btn btn-small btn-danger" type="button">Refuser</button>
+							<div class="alert alert-success">
+								<button type="button" class="close" data-dismiss="alert">&times;</button>
+								Vous avez accepté le contact ....
 							</div>
 						</div>
 						<div id="notification">
-							<div id="notif_contact">
-								Nom, prénom</br>
-								<button class="btn btn-small btn-success" type="button">Accepter</button>
-								<button class="btn btn-small btn-danger" type="button">Refuser</button>
+							<div class="alert alert-error">
+								<button type="button" class="close" data-dismiss="alert">&times;</button>
+								Vous avez refusé le contact ....
 							</div>
 						</div>
 					</div>
 					<div id="last-add">
-						<h2>Derniers ajouts</h2>
+						<h3>Derniers ajouts</h3>
 						<div id="contact">
 							<img src="../img/people.png" width="64">
 							<div id="description_contact">
