--- a/PROPPS/WebContent/index.html
+++ b/PROPPS/WebContent/index.html
@@ -57,10 +57,10 @@
 				<div class="span4">
 					<form class="form-signin" action="pages/compte.html">
 						<h2 class="form-signin-heading">Connectez-vous</h2>
-						<input type="text" class="input-block-level" placeholder="Adresse email">
-						<input type="password" class="input-block-level" placeholder="Mot de passe">
+						<input type="text" class="input-block-level" name="email" placeholder="Adresse email">
+						<input type="password" class="input-block-level" name="password" placeholder="Mot de passe">
 						<label class="checkbox">
-						  <input type="checkbox" value="remember-me"> Rester connecté
+						  <input type="checkbox" name="remember" value="1"> Rester connecté
 						</label>
 						<button class="btn btn-large btn-primary" type="submit">Connexion</button>
 					</form>
