--- a/PROPPS/WebContent/pages/compte.html
+++ b/PROPPS/WebContent/pages/compte.html
@@ -106,9 +106,13 @@
 					</div>
 					<div id="parcours">
 					<h3>A propos de Jack O'Neil</h3>
-						<dl class="dl-horizontal">
+						<dl>
 							<dt>Domaines d'expertise :</dt>
-							<dd>...</dd>	
+							<dd>
+								<span class="label label-success">Emission - Back Office</span> 
+								<span class="label label-important">Commerçant - Front Office</span>
+								<span class="label label-info">Automates - Front Office</span>
+							</dd>	
 							<dt>Profil Actuel :</dt>
 							<dd>...</dd>
 							<dt>Expériences professionnelles :</dt>
