--- a/PROPPS/WebContent/pages/compte.html
+++ b/PROPPS/WebContent/pages/compte.html
@@ -128,7 +128,26 @@
 							Dassault
 							</p>
 							<p class="muted">2008 - Aujourd'hui (4 ans)</p>
-							<p>Description du poste</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+								Maecenas nec rhoncus mi. Donec nec enim lectus. Donec est ipsum,
+								luctus nec eleifend ut, mattis fringilla arcu. Fusce placerat
+								pretium elit eget egestas. In ultricies dictum erat non
+								hendrerit. Nunc convallis feugiat ante, eget lacinia tellus
+								aliquet et. Nulla mollis accumsan metus, non semper risus
+								commodo sed. Nulla ornare mauris sit amet ligula hendrerit
+								volutpat. Praesent mollis justo vitae ante tempor iaculis.
+								Praesent eget turpis diam, a volutpat ipsum. Nunc id dapibus
+								tortor. Maecenas pharetra ornare condimentum. Phasellus
+								venenatis sodales justo vehicula laoreet. Morbi sapien nunc,
+								blandit et imperdiet non, tincidunt et nulla. Donec consectetur,
+								erat sed viverra fringilla, leo libero ultrices erat, sit amet
+								tincidunt arcu lorem at nunc. Praesent euismod lacinia
+								fermentum. Maecenas dictum interdum lectus convallis luctus.
+								Aliquam erat volutpat. Donec a vulputate enim. Duis feugiat
+								dignissim nisl a placerat. Sed purus felis, volutpat laoreet
+								pretium vitae, feugiat at justo. Fusce viverra risus ut enim
+								malesuada id porttitor elit tempus. Sed tellus elit, sodales at
+								facilisis in, scelerisque sed orci.</p>
 							<p>
 								<span class="label label-success">Emission - Back Office</span>
 							</p>
@@ -149,7 +168,7 @@
 
 
 						</div>
-
+						<hr class="bs-docs-separator">
 						<h3>
 							<img src="../img/expertise.png">Domaines d'expertise
 						</h3>
