--- a/PROPPS/WebContent/pages/compte.html
+++ b/PROPPS/WebContent/pages/compte.html
@@ -79,6 +79,8 @@
 							<ul class="dropdown-menu">
 								<li><a href="compte.html"><i class="icon-user"></i> Mon
 										compte</a></li>
+								<li><a href="#"><i class="icon-inbox"></i>
+										Inbox</a></li>
 								<li><a href="parametre.html"><i class="icon-wrench"></i>
 										Paramètre</a></li>
 								<li class="divider"></li>
