Update premiers servlets

--- a/PROPPS/WebContent/index.html
+++ b/PROPPS/WebContent/index.html
@@ -55,7 +55,7 @@
 					professionnels dans le but d'obtenir un emploi ou de la main d'oeuvre compétente.</p>
 				</div>
 				<div class="span4">
-					<form class="form-signin" action="pages/compte.html">
+					<form class="form-signin" action="connect">
 						<h2 class="form-signin-heading">Connectez-vous</h2>
 						<input type="text" class="input-block-level" name="email" placeholder="Adresse email">
 						<input type="password" class="input-block-level" name="password" placeholder="Mot de passe">
