--- a/PROPPS/WebContent/pages/inscription1.html
+++ b/PROPPS/WebContent/pages/inscription1.html
@@ -45,7 +45,7 @@
 							postes ouverts par les recruteurs membre de ce site. Ceux-ci
 							pourront accéder librement à votre profil.</p>
 
-						<form class="form-horizontal" action="compte.html">
+						<form class="form-horizontal" action="../registUser">
 							<fieldset>
 								<div class="alert alert-info">
 									<button type="button" class="close" data-dismiss="alert">&times;</button>
