--- a/PROPPS/WebContent/pages/compte.html
+++ b/PROPPS/WebContent/pages/compte.html
@@ -81,7 +81,7 @@
 										compte</a></li>
 								<li><a href="#"><i class="icon-inbox"></i> Inbox</a></li>
 								<li><a href="parametre.html"><i class="icon-wrench"></i>
-										Paramètre</a></li>
+										Paramètres</a></li>
 								<li class="divider"></li>
 								<!--<li><a href="messagerie.html"><i class="icon-envelope"></i> Messagerie</a></li>-->
 								<li><a href="#"><i class="icon-off"></i> Deconnexion</a></li>
@@ -95,11 +95,11 @@
 		</div>
 	</div>
 
-	<div id="wrap">
 
+	<div id="header-compte">
 		<div class="container">
 			<div class="row">
-				<div class="span9">
+				<div class="span12">
 
 					<div id="fiche_user">
 						<img src="../img/oneil.jpeg" width="140" class="img-polaroid">
@@ -118,6 +118,14 @@
 						</div>
 
 					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="wrap">
+		<div class="container">
+			<div class="row">
+				<div class="span9">
 					<div id="parcours">
 
 						<h3>
@@ -137,26 +145,28 @@
 							</div>
 							<div class="span7">
 
-								<p>Lorem ipsum dolor <br><br>sit amet, consectetur adipiscing elit.
-									Maecenas nec rhoncus mi. Donec nec enim lectus. Donec est
-									ipsum, luctus nec eleifend ut, mattis fringilla arcu. Fusce
-									placerat pretium elit eget egestas. In ultricies dictum erat
-									non hendrerit. Nunc convallis feugiat ante, eget lacinia tellus
-									aliquet et. Nulla mollis accumsan metus, non semper risus
-									commodo sed. Nulla ornare mauris sit amet ligula hendrerit
-									volutpat. Praesent mollis justo vitae ante tempor iaculis.
-									Praesent eget turpis diam, a volutpat ipsum. Nunc id dapibus
-									tortor. Maecenas pharetra ornare condimentum. Phasellus
-									venenatis sodales justo vehicula laoreet. Morbi sapien nunc,
-									blandit et imperdiet non, tincidunt et nulla. Donec
-									consectetur, erat sed viverra fringilla, leo libero ultrices
-									erat, sit amet tincidunt arcu lorem at nunc. Praesent euismod
-									lacinia fermentum. Maecenas dictum interdum lectus convallis
-									luctus. Aliquam erat volutpat. Donec a vulputate enim. Duis
-									feugiat dignissim nisl a placerat. Sed purus felis, volutpat
-									laoreet pretium vitae, feugiat at justo. Fusce viverra risus ut
-									enim malesuada id porttitor elit tempus. Sed tellus elit,
-									sodales at facilisis in, scelerisque sed orci.</p>
+								<p>
+									Lorem ipsum dolor <br> <br>sit amet, consectetur
+									adipiscing elit. Maecenas nec rhoncus mi. Donec nec enim
+									lectus. Donec est ipsum, luctus nec eleifend ut, mattis
+									fringilla arcu. Fusce placerat pretium elit eget egestas. In
+									ultricies dictum erat non hendrerit. Nunc convallis feugiat
+									ante, eget lacinia tellus aliquet et. Nulla mollis accumsan
+									metus, non semper risus commodo sed. Nulla ornare mauris sit
+									amet ligula hendrerit volutpat. Praesent mollis justo vitae
+									ante tempor iaculis. Praesent eget turpis diam, a volutpat
+									ipsum. Nunc id dapibus tortor. Maecenas pharetra ornare
+									condimentum. Phasellus venenatis sodales justo vehicula
+									laoreet. Morbi sapien nunc, blandit et imperdiet non, tincidunt
+									et nulla. Donec consectetur, erat sed viverra fringilla, leo
+									libero ultrices erat, sit amet tincidunt arcu lorem at nunc.
+									Praesent euismod lacinia fermentum. Maecenas dictum interdum
+									lectus convallis luctus. Aliquam erat volutpat. Donec a
+									vulputate enim. Duis feugiat dignissim nisl a placerat. Sed
+									purus felis, volutpat laoreet pretium vitae, feugiat at justo.
+									Fusce viverra risus ut enim malesuada id porttitor elit tempus.
+									Sed tellus elit, sodales at facilisis in, scelerisque sed orci.
+								</p>
 
 							</div>
 
@@ -190,6 +200,8 @@
 						</div>
 					</div>
 				</div>
+
+
 				<div class="span3">
 
 					<div id="last-add">
