--- a/PROPPS/WebContent/pages/parametre.html
+++ b/PROPPS/WebContent/pages/parametre.html
@@ -99,7 +99,7 @@
 			<div class="row">
 				<div class="span12">
 					<div class="page-header">
-						<h2>Paramètre</h2>
+						<h2>Paramètres</h2>
 					</div>
 					<div class="tabbable tabs-left">
 						<ul class="nav nav-tabs">
