--- a/PROPPS/WebContent/pages/inscription1.html
+++ b/PROPPS/WebContent/pages/inscription1.html
@@ -48,11 +48,10 @@
 						<form class="form-horizontal" action="../registUser">
 							<fieldset>
 								<div class="alert alert-info">
-									<button type="button" class="close" data-dismiss="alert">&times;</button>
-									<h4>Information!</h4>
-									Pour vous inscrire, merci de remplir le formulaire ci-dessous :
+									
+									<h4>Information !</h4>
+									Pour vous inscrire, merci de remplir le formulaire ci-dessous
 								</div>
-								<legend>Formulaire d'inscription</legend>
 								<div class="control-group">
 									<label class="control-label" for="inputNom">Nom</label>
 									<div class="controls">
