--- a/PROPPS/WebContent/pages/compte.html
+++ b/PROPPS/WebContent/pages/compte.html
@@ -86,9 +86,6 @@
 								<!--<li><a href="messagerie.html"><i class="icon-envelope"></i> Messagerie</a></li>-->
 								<li><a href="#"><i class="icon-off"></i> Deconnexion</a></li>
 							</ul></li>
-
-
-
 					</ul>
 				</div>
 			</div>
@@ -102,11 +99,11 @@
 				<div class="span12">
 
 					<div id="fiche_user">
-						<img src="../img/oneil.jpeg" width="140" class="img-polaroid">
+						<img src="../img/oneil.jpeg" height="140" class="img-polaroid">
 						<div id="detail_user">
 							<h2>Jack O'Neil</h2>
 							<br>
-							<p>
+							<p class="lead">
 								<i class="icon-briefcase"></i> Poste (profil), Entreprise<br>
 								<i class="icon-calendar"></i> Disponibilité <br> <i
 									class="icon-home"></i> Ville
@@ -127,11 +124,11 @@
 			<div class="row">
 				<div class="span9">
 					<div id="parcours">
+						<div id="title">
+							<img src="../img/experience.png">
+							<h3>Expériences professionnelles</h3>
+						</div>
 
-						<h3>
-							<img src="../img/experience.png">Expériences
-							professionnelles
-						</h3>
 						<div class="row">
 							<div class="span2">
 								<p>
@@ -190,9 +187,10 @@
 
 						</div>
 						<hr class="bs-docs-separator">
-						<h3>
-							<img src="../img/expertise.png">Domaines d'expertise
-						</h3>
+						<div id="title">
+							<img src="../img/expertise.png">
+							<h3>Domaines d'expertise</h3>
+						</div>
 						<div class="expertise">
 							<span class="label label-success">Emission - Back Office</span> <span
 								class="label label-important">Commerçant - Front Office</span> <span
@@ -205,7 +203,10 @@
 				<div class="span3">
 
 					<div id="last-add">
-						<h3>Derniers ajouts</h3>
+						<div id="title">
+							<img src="../img/contact.png">
+							<h3>Derniers ajouts</h3>
+						</div>
 						<div id="contact">
 							<img src="../img/people.png" width="64">
 							<div id="description_contact">
