--- a/PROPPS/WebContent/pages/parametre.html
+++ b/PROPPS/WebContent/pages/parametre.html
@@ -50,7 +50,7 @@
 					<ul class="nav pull-right">
 						<li class="dropdown"><a data-toggle="dropdown"
 							class="dropdown-toggle" href="#"><i class="icon-list-alt"></i>
-								Invitations <span class="badge badge-info">2</b></a>
+								Invitations <span class="badge badge-info">2</span> </b></a>
 							<ul class="dropdown-menu">
 								<li>
 									<div id="notification">
@@ -79,9 +79,11 @@
 							<ul class="dropdown-menu">
 								<li><a href="compte.html"><i class="icon-user"></i> Mon
 										compte</a></li>
-								<li><a href="parametre.html.html"><i
-										class="icon-wrench"></i> Messagerie</a></li>
+								<li><a href="#"><i class="icon-inbox"></i> Inbox</a></li>
+								<li><a href="parametre.html"><i class="icon-wrench"></i>
+										Paramètres</a></li>
 								<li class="divider"></li>
+								<!--<li><a href="messagerie.html"><i class="icon-envelope"></i> Messagerie</a></li>-->
 								<li><a href="#"><i class="icon-off"></i> Deconnexion</a></li>
 							</ul></li>
 
