--- a/PROPPS/WebContent/index.html
+++ b/PROPPS/WebContent/index.html
@@ -1,48 +1,52 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>PROPPS - Connexion</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<head>
+<meta charset="utf-8">
+<title>PROPPS - Connexion</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="">
+<meta name="author" content="">
 
-    <!-- Le styles -->
-    <link href="./css/bootstrap.css" rel="stylesheet">
-    <link href="./css/style.css" rel="stylesheet">
-    <link href="./css/bootstrap-responsive.css" rel="stylesheet">
+<!-- Le styles -->
+<link href="./css/bootstrap.css" rel="stylesheet">
+<link href="./css/style.css" rel="stylesheet">
+<link href="./css/bootstrap-responsive.css" rel="stylesheet">
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
+<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+<!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="./ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="./ico/apple-touch-icon-57-precomposed.png">
-    <link rel="icon" href="img/propps.ico">
-  </head>
+<!-- Fav and touch icons -->
+<link rel="apple-touch-icon-precomposed" sizes="144x144"
+	href="./ico/apple-touch-icon-144-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114"
+	href="./ico/apple-touch-icon-114-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72"
+	href="./ico/apple-touch-icon-72-precomposed.png">
+<link rel="apple-touch-icon-precomposed"
+	href="./ico/apple-touch-icon-57-precomposed.png">
+<link rel="icon" href="img/propps.ico">
+</head>
 
-  <body data-spy="scroll">
-  <!-- Navbar
+<body data-spy="scroll">
+	<!-- Navbar
     ================================================== -->
-   
 
 
-    		
+
+
 	<div id="header">
 		<div class="container">
 			<div class="row">
-				<div class="span7">
+				<div class="span12">
 					<h1>ProPPS</h1>
 				</div>
 			</div>
 		</div>
 	</div>
-	
+
 	<div id="wrap">
 		<div class="container">
 			<div class="row">
@@ -50,43 +54,49 @@
 					<div class="page-header">
 						<h1>Réseau Professionnel Paris-Sud</h1>
 					</div>
-					<p class="lead">Bienvenue sur le réseau Professionnel de Polytech Paris-Sud.</p>
-					<p class="lead">Il s'agit d'un réseau social permettant de recenser des contacts 
-					professionnels dans le but d'obtenir un emploi ou de la main d'oeuvre compétente.</p>
+					<p class="lead">Bienvenue sur le réseau Professionnel de
+						Polytech Paris-Sud.</p>
+					<p class="lead">Il s'agit d'un réseau social permettant de
+						recenser des contacts professionnels dans le but d'obtenir un
+						emploi ou de la main d'oeuvre compétente.</p>
 				</div>
 				<div class="span4">
 					<form class="form-signin" action="connect">
 						<h2 class="form-signin-heading">Connectez-vous</h2>
-						<input type="text" class="input-block-level" name="email" placeholder="Adresse email">
-						<input type="password" class="input-block-level" name="password" placeholder="Mot de passe">
-						<label class="checkbox">
-						  <input type="checkbox" name="remember" value="1"> Rester connecté
+						<input type="text" class="input-block-level" name="email"
+							placeholder="Adresse email"> <input type="password"
+							class="input-block-level" name="password"
+							placeholder="Mot de passe"> <label class="checkbox">
+							<input type="checkbox" name="remember" value="1"> Rester
+							connecté - <a href="#">Mot de passe oublié?</a>
 						</label>
 						<button class="btn btn-large btn-primary" type="submit">Connexion</button>
 					</form>
 					<div class="page-header">
 						<h2>Inscription</h2>
 					</div>
-					<a href="pages/inscription1.html" class="btn btn-large  btn-block btn-primary">En tant que Membre</a>
-					 <a href="pages/inscription_ent.html" class="btn btn-large btn-block">En tant que Recruteur</a>
-					 
+					<a href="pages/inscription1.html"
+						class="btn btn-large  btn-block btn-primary">En tant que
+						Membre</a> <a href="pages/inscription_ent.html"
+						class="btn btn-large btn-block">En tant que Recruteur</a>
+
 
 				</div>
 			</div>
+		</div>
 	</div>
-</div>
 	<div id="footer">
 		<div class="container">
-		
+
 			<p class="muted credit">&copy;PROPPS 2013</p>
 		</div>
 	</div>
 
-     <!-- Le javascript
+	<!-- Le javascript
     ================================================== -->
 
-    <script src="js/jquery-1.9.0.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
+	<script src="js/jquery-1.9.0.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+</body>
 </html>
