--- a/PROPPS/WebContent/pages/compte.html
+++ b/PROPPS/WebContent/pages/compte.html
@@ -136,8 +136,9 @@
 								Dassault
 								</p>
 								<p class="muted">2008 - Aujourd'hui (4 ans)</p>
+								<p class="muted">CDI</p>
 								<p>
-									<span class="label label-success">Emission - Back Office</span>
+									<span class="label label-info">Emission - Back Office</span>
 								</p>
 							</div>
 							<div class="span7">
@@ -175,9 +176,10 @@
 								<h4>Developpeur (profil)</h4>
 								Amadeus
 								</p>
-								<p class="muted">2002 - 2008 (6 ans)</p>
+								<p class="muted">2002 - 2008 (6 ans)</p> 
+								<p class="muted">Prestation</p>
 								<p>
-									<span class="label label-success">Emission - Back Office</span>
+									<span class="label label-info">Emission - Back Office</span>
 								</p>
 							</div>
 							<div class="span7">
@@ -192,14 +194,12 @@
 							<h3>Domaines d'expertise</h3>
 						</div>
 						<div class="expertise">
-							<span class="label label-success">Emission - Back Office</span> <span
-								class="label label-important">Commerçant - Front Office</span> <span
+							<span class="label label-info">Emission - Back Office</span> <span
+								class="label label-info">Commerçant - Front Office</span> <span
 								class="label label-info">Automates - Front Office</span>
 						</div>
 					</div>
 				</div>
-
-
 				<div class="span3">
 
 					<div id="last-add">
