--- a/PROPPS/WebContent/admin/membres.html
+++ b/PROPPS/WebContent/admin/membres.html
@@ -39,11 +39,14 @@
 				<a class="brand" href="../admin.html">ProPPS</a>
 				<div class="nav-collapse collapse navbar-responsive-collapse">
 					<ul class="nav">
-						<li class="active"><a href="index.html">Accueil</a></li>
-						<li><a href="membres.html">Membres</a></li>
+						<li><a href="index.html">Accueil</a></li>
+						<li class="active"><a href="membres.html">Membres</a></li>
 						<li><a href="config.html">Configuration site</a></li>
 					</ul>
 				</div>
+				<form class="navbar-search pull-right">
+					<input type="text" class="search-query" placeholder="Recherche">
+				</form>
 			</div>
 		</div>
 	</div>
@@ -58,17 +61,21 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="span3 offset9">
-					<form class="form-search">
-						<input type="text" class="input-medium search-query">
-						<button type="submit" class="btn">Search</button>
-					</form>
-				</div>
-			</div>
+
 			<div class="row">
 
 				<div class="span12">
+					<div class="pagination pagination-centered">
+						<ul>
+							<li><a href="#">Préc</a></li>
+							<li><a href="#">1</a></li>
+							<li><a href="#">2</a></li>
+							<li><a href="#">3</a></li>
+							<li><a href="#">4</a></li>
+							<li><a href="#">5</a></li>
+							<li><a href="#">Suiv</a></li>
+						</ul>
+					</div>
 					<ul class="thumbnails">
 						<li class="span2">
 							<div class="thumbnail">
@@ -122,6 +129,7 @@
 							</div>
 						</li>
 					</ul>
+
 				</div>
 			</div>
 		</div>
