--- a/PROPPS/WebContent/pages/parametre.html
+++ b/PROPPS/WebContent/pages/parametre.html
@@ -38,15 +38,12 @@
 				</button>
 				<a class="brand" href="../index.html">ProPPS</a>
 				<div class="nav-collapse collapse navbar-responsive-collapse">
-					<form action="result_recherche_membre.html"
+					<form action="recherche_membre.html"
 						class="navbar-search pull-left">
 						<input type="text" placeholder="Recherches"
 							class="search-query span2">
 					</form>
-					<ul class="nav">
-						<li><a href="recherche_membre.html"><i
-								class="icon-search"></i> Recherche Avancée</a></li>
-					</ul>
+					
 					<ul class="nav pull-right">
 						<li class="dropdown"><a data-toggle="dropdown"
 							class="dropdown-toggle" href="#"><i class="icon-list-alt"></i>
@@ -79,16 +76,13 @@
 							<ul class="dropdown-menu">
 								<li><a href="compte.html"><i class="icon-user"></i> Mon
 										compte</a></li>
-								<li><a href="#"><i class="icon-inbox"></i> Inbox</a></li>
+								<li><a href="messagerie.html"><i class="icon-inbox"></i> Inbox</a></li>
 								<li><a href="parametre.html"><i class="icon-wrench"></i>
 										Paramètres</a></li>
 								<li class="divider"></li>
 								<!--<li><a href="messagerie.html"><i class="icon-envelope"></i> Messagerie</a></li>-->
 								<li><a href="#"><i class="icon-off"></i> Deconnexion</a></li>
 							</ul></li>
-
-
-
 					</ul>
 				</div>
 			</div>
