Inscription utilisateur et connexion -> gestion des erreurs

--- a/PROPPS/WebContent/index.html
+++ b/PROPPS/WebContent/index.html
@@ -61,7 +61,7 @@
 						emploi ou de la main d'oeuvre compétente.</p>
 				</div>
 				<div class="span4">
-					<form class="form-signin" action="connect">
+					<form class="form-signin" action="connect" method="post">
 						<h2 class="form-signin-heading">Connectez-vous</h2>
 						<input type="text" class="input-block-level" name="email"
 							placeholder="Adresse email"> <input type="password"
