--- a/PROPPS/WebContent/pages/inscription1.html
+++ b/PROPPS/WebContent/pages/inscription1.html
@@ -45,7 +45,7 @@
 							postes ouverts par les recruteurs membre de ce site. Ceux-ci
 							pourront accéder librement à votre profil.</p>
 
-						<form id="formInscription" class="form-horizontal" action="../registUser">
+						<form id="formInscription" class="form-horizontal" action="../registUser" method="post">
 							<fieldset>
 								<div class="alert alert-info">
 
@@ -71,8 +71,6 @@
 									<div class="controls">
 										<input type="email" name="email" id="inputEmail"
 											placeholder="johndoe@yahoo.fr">
-											<!-- Message d'erreur -->
-										<p class="text-error">Adresse email déjà utilisée</p>
 									</div>
 
 								</div>
