Init inscription entreprise

--- a/PROPPS/WebContent/pages/inscription_ent.html
+++ b/PROPPS/WebContent/pages/inscription_ent.html
@@ -46,25 +46,25 @@
 						Il vous est également possible d'ajouter toutes informations vous semblant utiles (domaine d'activté, localisation de l'entreprise,etc...)
 						</p>
 					
-						<form class="form-horizontal" action="entreprise.html">
+						<form class="form-horizontal" action="../registRecruiter" method="post">
 							<fieldset>
 								<legend>Formulaire d'inscription</legend>
 								<div class="control-group">
 									<label class="control-label" for="inputCompte">Nom du compte</label>
 									<div class="controls">
-										<input type="text" id="inputCompte" placeholder="Polytech">
+										<input type="text" name="inputCompte" id="inputCompte" placeholder="Polytech">
 									</div>
 								</div>	
 								<div class="control-group">
 									<label class="control-label" for="inputEmail">Adresse e-mail</label>
 									<div class="controls">
-										<input type="text" id="inputEmail" placeholder="recrutement@polytech.fr">
+										<input type="text" id="inputEmail" name="inputEmail" placeholder="recrutement@polytech.fr">
 									</div>
 								</div>
 								<div class="control-group">
 									<label class="control-label" for="inputPassword">Mot de passe</label>
 									<div class="controls">
-										<input type="password" id="inputPassword" placeholder="Mot de passe">
+										<input type="password" id="inputPassword" name="inputPassword" placeholder="Mot de passe">
 										<a href="#" rel="tooltip" data-placement="top" title="Le mot de passe doit contenir au minimum une majuscule 
 									et un chiffre. Le mot de passe doit avoir une longueur minimum de 8 caractères"><i class="icon-info-sign"></i></a>	
 									</div>
@@ -72,37 +72,37 @@
 								<div class="control-group">
 									<label class="control-label" for="inputConfirmPassword">Confirmez le mot de passe</label>
 									<div class="controls">
-										<input type="password" id="inputConfirmPassword" placeholder="Mot de passe">
+										<input type="password" id="inputConfirmPassword" name="inputConfirmPassword" placeholder="Mot de passe">
 									</div>
 								</div>
 								<div class="control-group">
 									<label class="control-label" for="inputSociete">Nom de la société</label>
 									<div class="controls">
-										<input type="text" id="inputSociete" placeholder="Polytech">
+										<input type="text" id="inputSociete" name="inputSociete" placeholder="Polytech">
 									</div>
 								</div>
 								<div class="control-group">
 									<label class="control-label" for="inputAdressFact">Adresse de facturation</label>
 									<div class="controls">
-										<input type="text" id="inputAdressFact" placeholder="....">
+										<input type="text" id="inputAdressFact" name="inputAdressFact" placeholder="....">
 									</div>
 								</div>
 								<div class="control-group">
 									<label class="control-label" for="inputPays">Pays</label>
 									<div class="controls">
-										<input type="text" id="inputPays" placeholder="France">
+										<input type="text" id="inputPays" name="inputPays" placeholder="France">
 									</div>
 								</div>
 								<div class="control-group">
 									<label class="control-label" for="inputCodePostal">Code postal</label>
 									<div class="controls">
-										<input type="text" id="inputCodePostal" placeholder="91305">
+										<input type="text" id="inputCodePostal" name="inputCodePostal" placeholder="91305">
 									</div>
 								</div>
 								<div class="control-group">
 									<label class="control-label" for="inputVille">Ville</label>
 									<div class="controls">
-										<input type="text" id="inputVille" placeholder="Orsay">
+										<input type="text" id="inputVille" name="inputVille" placeholder="Orsay">
 									</div>
 								</div>
 								<div class="control-group">
