--- a/PROPPS/WebContent/pages/compte.html
+++ b/PROPPS/WebContent/pages/compte.html
@@ -125,7 +125,142 @@
 						<div id="title">
 							<img src="../img/experience.png">
 							<h3>Expériences professionnelles</h3>
+							<button type="button" class="btn btn-mini pull-right"
+								data-toggle="collapse" data-target="#addExperience">
+								<i class="icon-pencil"></i>
+							</button>
 						</div>
+
+						<div id="addExperience" class="collapse in">
+							<form id="formAddExp" class="form-horizontal" action="">
+								<fieldset>
+									<legend>Ajouter une nouvelle expérience
+										professionnelle</legend>
+									<div class="row">
+										<div class="span4">
+											<div class="control-group">
+												<label class="control-label" for="inputSociété">Société</label>
+												<div class="controls">
+													<input type="text" name="societe" id="inputSociété"
+														placeholder="Thales">
+												</div>
+											</div>
+											<div class="control-group">
+												<label class="control-label" for="expertise">
+													Domaines d'expertise </label>
+												<div class="controls">
+													<label class="checkbox"> <input type="checkbox"
+														name="expertise1" value="EmissionFront" checked>
+														Emission - Front office
+													</label> <label class="checkbox"> <input type="checkbox"
+														name="expertise2" value="EmissionBack"> Emission -
+														Back office
+													</label> <label class="checkbox"> <input type="checkbox"
+														name="expertise3" value="CommercantFront">
+														Commerçant - Front office
+													</label> <label class="checkbox"> <input type="checkbox"
+														name="expertise4" value="CommercantBack">
+														Commerçant - Back office
+													</label> <label class="checkbox"> <input type="checkbox"
+														name="expertise5" value="AutomatesFront">
+														Automates - Front office
+													</label> <label class="checkbox"> <input type="checkbox"
+														name="expertise6" value="AutomatesBack"> Automates
+														- Back office
+													</label>
+												</div>
+											</div>
+											<div class="control-group">
+												<label class="control-label" for="profil"> Profil </label>
+												<div class="controls">
+													<label class="radio"> <input type="radio"
+														name="profil" id="optionsRadios1" value="MOA" checked>
+														MOA
+													</label> <label class="radio"> <input type="radio"
+														name="profil" id="optionsRadios2" value="MOE"> MOE
+													</label> <label class="radio"> <input type="radio"
+														name="profil" id="optionsRadios3" value="DCompetence">
+														Double Compétence
+													</label>
+												</div>
+											</div>
+										</div>
+										<div class="span4">
+
+
+											<div class="control-group">
+												<label class="control-label" for="dateDebut">Date de
+													début</label>
+												<div class="controls">
+													<div class="input-append date" id="dp3"
+														data-date="04/02/2013" data-date-format="dd/mm/yyyy">
+														<input class="span2" size="16" type="text"
+															value="04/02/2013"> <span class="add-on"><i
+															class="icon-calendar"></i></span>
+													</div>
+
+												</div>
+											</div>
+											<div class="control-group">
+												<label class="control-label" for="dateFin">Date de
+													fin</label>
+												<div class="controls">
+													<div class="input-append date" id="dp3"
+														data-date="04/02/2013" data-date-format="dd/mm/yyyy">
+														<input class="span2" size="16" type="text"
+															value="04/02/2013"> <span class="add-on"><i
+															class="icon-calendar"></i></span>
+													</div>
+													<a href="#" rel="tooltip" data-placement="top"
+														title="Ne renseigner une date de fin que si l'expérience professionnelle est terminée"><i
+														class="icon-info-sign"></i></a>
+												</div>
+											</div>
+											<div class="control-group">
+												<label class="control-label" for="inputDirection">Direction
+													au sein de la société</label>
+												<div class="controls">
+													<input type="text" name="direction" id="inputDirection"
+														placeholder="...">
+												</div>
+											</div>
+											<div class="control-group">
+												<label class="control-label" for="inputPoste">Poste
+													occupé</label>
+												<div class="controls">
+													<input type="email" name="poste" id="inputPoste"
+														placeholder="Ingénieur d'étude">
+												</div>
+
+											</div>
+
+											<div class="control-group">
+												<label class="control-label" for="inputDescription">Description</label>
+												<div class="controls">
+													<textarea row="3" name="description" id="inputDescription"
+														placeholder="Description"></textarea>
+												</div>
+											</div>
+										</div>
+
+
+
+									</div>
+
+
+
+
+
+									<div class="control-group">
+										<div class="controls">
+											<button type="submit" class="btn btn-primary">Ajouter</button>
+										</div>
+									</div>
+								</fieldset>
+							</form>
+						</div>
+
+
 
 						<div class="row">
 							<div class="span2">
@@ -174,7 +309,7 @@
 								<h4>Developpeur (profil)</h4>
 								Amadeus
 								</p>
-								<p class="muted">2002 - 2008 (6 ans)</p> 
+								<p class="muted">2002 - 2008 (6 ans)</p>
 								<p class="muted">Prestation</p>
 								<p>
 									<span class="label label-info">Emission - Back Office</span>
@@ -190,7 +325,14 @@
 						<div id="title">
 							<img src="../img/expertise.png">
 							<h3>Domaines d'expertise</h3>
+							<button type="button" class="btn btn-mini pull-right"
+								data-toggle="collapse" data-target="#addExpertise">
+								<i class="icon-pencil"></i>
+							</button>
 						</div>
+
+
+						<div id="addExpertise" class="collapse in">teztetzeatazet</div>
 						<div class="expertise">
 							<span class="label label-info">Emission - Back Office</span> <span
 								class="label label-info">Commerçant - Front Office</span> <span
@@ -248,6 +390,10 @@
 	<script>
 		$(document).off('touchstart.dropdown.data-api');
 		$('.dropdown-toggle').dropdown();
+		$(".collapse").collapse();
+		$(function() {
+			$("[rel='tooltip']").tooltip();
+		});
 	</script>
 </body>
 </html>
