--- a/PROPPS/WebContent/pages/compte.html
+++ b/PROPPS/WebContent/pages/compte.html
@@ -39,9 +39,9 @@
 				</button>
 				<a class="brand" href="../index.html">ProPPS</a>
 				<div class="nav-collapse collapse navbar-responsive-collapse">
-					<form action="recherche_membre.html"
-						class="navbar-search pull-left">
-						<input type="text" placeholder="Recherches"
+					<form action="quickSearch"
+						class="navbar-search pull-left" method="post">
+						<input type="text" name="quicksearch" placeholder="Recherches"
 							class="search-query span2">
 					</form>
 
