--- a/PROPPS/WebContent/pages/compte.html
+++ b/PROPPS/WebContent/pages/compte.html
@@ -126,11 +126,12 @@
 						<div id="title">
 							<img src="../img/experience.png">
 							<h3>Expériences professionnelles</h3>
+							<!-- Bouton pour déclencher l'ouverture du div -->
 							<a class="pull-right" data-toggle="collapse"
 								data-target="#experience"> <i class="icon-pencil"></i>
 							</a>
 						</div>
-
+						<!-- Div qui permet de créer une nouvelle expérience -->
 						<div id="experience" class="collapse in">
 							<form id="formAddExp" class="" action="">
 								<fieldset>
@@ -224,7 +225,7 @@
 														<input class="span2" size="16" type="text" value="">
 														<span class="add-on"><i class="icon-calendar"></i></span>
 													</div>
-													<a href="#" rel="tooltip" data-placement="top"
+													<a href="#" rel="tooltip" data-placement="right"
 														title="Ne renseigner une date de fin que si l'expérience professionnelle est terminée"><i
 														class="icon-info-sign"></i></a>
 												</div>
@@ -256,7 +257,7 @@
 											</div>
 											<div class="control-group">
 												<div class="controls">
-													<button type="submit" class="btn btn-primary">Ajouter</button>
+													<button type="submit" class="btn btn-primary">Modifier</button>
 												</div>
 											</div>
 										</div>
@@ -268,6 +269,7 @@
 						<div class="row">
 							<div class="span2">
 								<p>
+									<!-- Bouton pour déclencher l'ouverture du div -->
 									<a data-toggle="collapse" data-target="#modifExperience1">
 										<i class="icon-pencil"></i>
 									</a>
@@ -307,6 +309,7 @@
 
 							</div>
 							<div class="span9">
+								<!-- Le div permet de modifier l'expérience pro sélectionné, il faut rajouter un numéro pour chaque div pour le différencier des autres -->
 								<div id="modifExperience1" class="modifExperience collapse in">
 									<form id="formAddExp" class="" action="">
 										<fieldset>
@@ -399,7 +402,7 @@
 																<input class="span2" size="16" type="text" value="">
 																<span class="add-on"><i class="icon-calendar"></i></span>
 															</div>
-															<a href="#" rel="tooltip" data-placement="top"
+															<a href="#" rel="tooltip" data-placement="right"
 																title="Ne renseigner une date de fin que si l'expérience professionnelle est terminée"><i
 																class="icon-info-sign"></i></a>
 														</div>
@@ -431,7 +434,7 @@
 													</div>
 													<div class="control-group">
 														<div class="controls">
-															<button type="submit" class="btn btn-primary">Ajouter</button>
+															<button type="submit" class="btn btn-primary">Modifier</button>
 														</div>
 													</div>
 												</div>
@@ -446,6 +449,7 @@
 						<div class="row">
 							<div class="span2">
 								<p>
+									<!-- Bouton pour déclencher l'ouverture du div -->
 									<a data-toggle="collapse" data-target="#modifExperience2">
 										<i class="icon-pencil"></i>
 									</a>
@@ -463,6 +467,7 @@
 
 							</div>
 							<div class="span9">
+								<!-- Le div permet de modifier l'expérience pro sélectionné, il faut rajouter un numéro pour chaque div pour le différencier des autres -->
 								<div id="modifExperience2" class="modifExperience collapse in">
 									<form id="formAddExp" class="" action="">
 										<fieldset>
@@ -555,7 +560,7 @@
 																<input class="span2" size="16" type="text" value="">
 																<span class="add-on"><i class="icon-calendar"></i></span>
 															</div>
-															<a href="#" rel="tooltip" data-placement="top"
+															<a href="#" rel="tooltip" data-placement="right"
 																title="Ne renseigner une date de fin que si l'expérience professionnelle est terminée"><i
 																class="icon-info-sign"></i></a>
 														</div>
@@ -602,12 +607,13 @@
 						<div id="title">
 							<img src="../img/expertise.png">
 							<h3>Domaines d'expertise</h3>
+							<!-- Bouton pour déclencher l'ouverture du div -->
 							<a class="pull-right" data-toggle="collapse"
 								data-target="#expertise"> <i class="icon-pencil"></i>
 							</a>
 
 						</div>
-
+						<!-- Div qui permet d'ajouter un domaine d'expertise -->
 						<div id="expertise" class="collapse in">
 							<form id="formAddDomExp" class="form-horizontal" action="">
 								<fieldset>
@@ -695,16 +701,22 @@
 	<!-- Le javascript
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
+
 	<script src="http://platform.twitter.com/widgets.js"
 		type="text/javascript"></script>
 	<script src="../js/jquery-1.9.0.js"></script>
 	<script src="../js/bootstrap.js"></script>
 	<script src="../js/bootstrap.min.js"></script>
+
+
+
+	<!-- JS supplementaire -->
 	<script src="../js/bootstrap-datepicker.js"></script>
 
 	<script>
 		$(document).off('touchstart.dropdown.data-api');
 		$('.dropdown-toggle').dropdown();
+
 		$('.date').datepicker();
 		$('#expertise').collapse({
 			toggle : true
@@ -717,6 +729,9 @@
 		$('.modifExperience').collapse({
 			toggle : true
 		})
+		$(function() {
+			$("[rel='tooltip']").tooltip();
+		});
 	</script>
 </body>
 </html>
