--- a/PROPPS/WebContent/admin/config.html
+++ b/PROPPS/WebContent/admin/config.html
@@ -41,7 +41,8 @@
 					<ul class="nav">
 						<li><a href="index.html">Accueil</a></li>
 						<li><a href="membres.html">Membres</a></li>
-						<li class="active"><a href="config.html">Configuration site</a></li>
+						<li class="active"><a href="config.html">Configuration
+								site</a></li>
 					</ul>
 				</div>
 			</div>
@@ -56,6 +57,75 @@
 					<div class="page-header">
 						<h2>Configuration du site</h2>
 					</div>
+					<form id="formAddDomExp" class="form-horizontal" action="">
+						<fieldset>
+							<legend>Ajouter un nouveau domaine d'expertise</legend>
+
+							<div class="control-group">
+								<label class="control-label" for="domaine">Domaine</label>
+								<div class="controls">
+									<select name="domaine">
+										<option>Emission</option>
+										<option>Commerçant</option>
+										<option>Automates</option>
+									</select>
+								</div>
+							</div>
+
+							<div class="control-group">
+								<label class="control-label" for="type">Type</label>
+								<div class="controls">
+									<select name="type">
+										<option>Front Office</option>
+										<option>Back Office</option>
+									</select>
+								</div>
+							</div>
+
+							<div class="control-group">
+								<div class="controls">
+									<button type="submit" class="btn btn-primary">Ajouter</button>
+								</div>
+							</div>
+						</fieldset>
+					</form>
+
+					<legend>Modifier les domaines d'expertise disponibles</legend>
+					<!-- L'adresse du lien contient l'identifiant du domaine d'expertise à supprimer -->
+					<table>
+						<tbody>
+							<tr>
+								<td>Emission - Front Office</td>
+								<td><a href="deleteDomaineId1.html"><i
+										class="icon-remove-sign"></i></a></td>
+							</tr>
+							<tr>
+								<td>Emission - Back Office</td>
+								<td><a href="deleteDomaineId2.html"><i
+										class="icon-remove-sign"></i></a></td>
+							</tr>
+							<tr>
+								<td>Commerçant - Front Office</td>
+								<td><a href="deleteDomaineId3.html"><i
+										class="icon-remove-sign"></i></a></td>
+							</tr>
+							<tr>
+								<td>Commerçant - Back Office</td>
+								<td><a href="deleteDomaineId4.html"><i
+										class="icon-remove-sign"></i></a></td>
+							</tr>
+							<tr>
+								<td>Automates - Front Office</td>
+								<td><a href="deleteDomaineId5.html"><i
+										class="icon-remove-sign"></i></a></td>
+							</tr>
+							<tr>
+								<td>Automates - Back Office</td>
+								<td><a href="deleteDomaineId6.html"><i
+										class="icon-remove-sign"></i></a></td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
 			</div>
 		</div>
